# DevMind

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 1e3ff5376621_add_users_table_and_user_id.py  99bb86b30d8a_initial_schema.py
app/: main.py
app/api/routes/: auth.py  health.py  review.py
app/core/: config.py  security.py
app/db/: database.py
app/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py
app/models/: review.py  user.py
app/schemas/: auth.py  review.py
app/services/: auth_service.py  review_service.py
app/services/rag/: chain.py  embeddings.py
scripts/: init_checkpointer.py  init_db.py
tests/: test_review.py
