[project]
name = "devmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "langchain==0.2.6",
    "langchain-community==0.2.6",
    "langchain-groq==0.1.6",
    "langchain-huggingface==0.0.3",
    "langchain-qdrant>=0.2.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.9",
    "qdrant-client==1.10.1",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.31",
    "uvicorn[standard]==0.30.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
